--- a/front_end/index.html
+++ b/front_end/index.html
@@ -6,8 +6,8 @@
 
     <style type="text/css">
         #mynetwork {
-            width: 600px;
-            height: 400px;
+            width: 1000px;
+            height: 1000px;
             border: 1px solid lightgray;
         }
     </style>
@@ -16,22 +16,67 @@
 <div id="mynetwork"></div>
 
 <script type="text/javascript">
-    // create an array with nodes
-    var nodes = new vis.DataSet([
-        {id: 1, label: 'Node 1', color: 'red'},
-        {id: 2, label: 'Node 2'},
-        {id: 3, label: 'Node 3'},
-        {id: 4, label: 'Node 4'},
-        {id: 5, label: 'Node 5'}
-    ]);
 
-    // create an array with edges
-    var edges = new vis.DataSet([
-        {from: 1, to: 3},
-        {from: 1, to: 2},
-        {from: 2, to: 4},
-        {from: 2, to: 5}
-    ]);
+    var nodes = new vis.DataSet();
+    var edges = new vis.DataSet();
+
+    function parseData(data) {
+      var map = new Map();
+      for (var key in data) {
+        if (!map.has(key)) {
+          map.set(key, 0);
+        }
+        var mails = data[key];
+        var i;
+        for (i = 0; i < mails.length; i++) {
+          person = mails[i];
+          if (!map.has(person.name)) {
+            map.set(person.name, 0);
+          }
+          addWeight(map, key, person.name, person.dates.length);
+          edges.add({
+            from: key,
+            to: person.name,
+            value: person.dates.length
+          });
+        }
+      }
+      map.forEach(createNode);
+      console.log(nodes);
+    }
+
+    function createNode(value, key, map) {
+      nodes.add({
+        id: key,
+        label: key,
+        value: value
+      });
+    }
+
+    function addWeight(map, from, to, weight) {
+      map.set(from, map.get(from) + weight);
+      map.set(to, map.get(to) + weight);
+    }
+
+    var json = {
+      "johnmayer@shell.com": [
+        {
+          "name":  "jessica@student.tudelft.nl",
+          "dates": ["12-02-1988", "13-05-1998"]
+        },
+        {
+          "name": "winnerboy@hotmail.com",
+          "dates": ["12-04-1984", "27-04-2015", "15-01-2014"]
+        }
+      ]
+    }
+
+    parseData(json);
+
+    // for (var k in json) {
+    //   console.log(k);
+    //   console.log(json[k][0].dates.length);
+    // }
 
     // create a network
     var container = document.getElementById('mynetwork');
@@ -41,10 +86,34 @@
         nodes: nodes,
         edges: edges
     };
-    var options = {};
+    var options = {
+      nodes: {
+        shape: 'circle',
+        scaling: {
+          label: {
+            enabled: true,
+          }
+        }
+      },
+      edges: {
+        color: {
+          inherit: false
+        }
+      },
+      groups: {
+        ceo: {color: 'red'}
+      },
+      physics: {
+        barnesHut: {
+          springLength:500,
+          springConstant: 0.02
+        }
+      }
+    };
 
     // initialize your network!
     var network = new vis.Network(container, data, options);
+
 </script>
 </body>
 </html>
