First working version guys!!!!!

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -45,7 +45,7 @@
             from: key,
             to: person,
             value: dates.length,
-            url: "timeline.html?ijt/page.aspx?&from="+email+"&to="+person
+            url: "timeline.html?ijt/page.aspx?&from="+key+"&to="+person
           });
         }
       }
