--- a/front_end/timeline.html
+++ b/front_end/timeline.html
@@ -10,8 +10,8 @@
 </style>
 
 
-<script type="text/javascript" src="vis/vis.min.js"></script>
-    <link href="vis/vis.min.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="js/vis.min.js"></script>
+    <link href="js/vis.min.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="../JSON/test.js"></script>
     <script type="text/javascript" src = "data/result.js"></script>
     </head>
